--- a/TheEND/VerfiEquations.ipynb
+++ b/TheEND/VerfiEquations.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "389ea8da-4aeb-46a0-975c-5578577987bf",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "[\\omega**2*h*m*x_0*sin(\\theta(t))*cos(\\Phi + \\omega*t - \\phi(t))]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "fe8f4e44-f561-40c9-9df7-c494e8bcaf7d",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "[                                0]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "77e8af6c-db58-4e0d-bec3-30f7871ae636",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "[              cos(\\theta(t))]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "77f99f1c-7ecd-4dac-945c-d57a53ea571a",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "g*h*m*sin(\\theta(t))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "fd2428e1-36cd-4a70-9efa-cc1ad2a84fee",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "-\\omega**2*h*m*x_0*sin(\\Phi + \\omega*t - \\phi(t))*cos(\\theta(t))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "09494637-4a97-42e8-9473-4acd361e3154",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
        "\\omega**2*h*m*x_0*sin(\\theta(t))*cos(\\Phi + \\omega*t - \\phi(t))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "d090c32b-e89c-4c11-ae34-e75d68888f92",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "6756c88d-6da2-448d-ae52-2410dd056b22",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "[                                                                   -h*sin(\\theta(t))*Derivative(\\theta(t), t)]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "9fb98d69-e3e5-4b3c-95f7-dbc4381d0292",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "d62f681d-9f46-41f6-9cad-bd5850955d76",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "[                             J_3*(cos(\\theta(t))*Derivative(\\phi(t), t) + Derivative(\\psi(t), t))]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "099ef4af-f724-44ee-9d59-3d3791311520",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "-J_1*(-sin(\\psi(t))*Derivative(\\theta(t), t) + sin(\\theta(t))*cos(\\psi(t))*Derivative(\\phi(t), t))*sin(\\theta(t))*cos(\\phi(t)) + J_1*(sin(\\psi(t))*sin(\\theta(t))*Derivative(\\phi(t), t) + cos(\\psi(t))*Derivative(\\theta(t), t))*sin(\\phi(t))*sin(\\theta(t)) + J_3*(cos(\\theta(t))*Derivative(\\phi(t), t) + Derivative(\\psi(t), t))*cos(\\theta(t))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "id": "186e7290-e05d-44dd-8d72-60b2d8f6700b",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
        "J_3*(cos(\\theta(t))*Derivative(\\phi(t), t) + Derivative(\\psi(t), t))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "0f081c2e-39a3-495a-9ce2-f87e1a317d5e",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "J_1*(sin(\\phi(t) + \\psi(t))*sin(\\theta(t))*Derivative(\\phi(t), t) + cos(\\phi(t) + \\psi(t))*Derivative(\\theta(t), t))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "id": "e11fee3e-0758-4124-84b2-270b2a8bc087",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "-(-sin(\\psi(t))*Derivative(\\theta(t), t) + sin(\\theta(t))*cos(\\psi(t))*Derivative(\\phi(t), t))*sin(\\theta(t))*cos(\\phi(t)) + (cos(\\theta(t))*Derivative(\\phi(t), t) + Derivative(\\psi(t), t))*cos(\\theta(t)) + (sin(\\psi(t))*sin(\\theta(t))*Derivative(\\phi(t), t) + cos(\\psi(t))*Derivative(\\theta(t), t))*sin(\\phi(t))*sin(\\theta(t))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "id": "a3b843dc-17b5-4ead-b17d-f33cb9d5df9b",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "[                                                                                                                                                                                    J_3*(-sin(\\theta(t))*Derivative(\\phi(t), t)*Derivative(\\theta(t), t) + cos(\\theta(t))*Derivative(\\phi(t), (t, 2)) + Derivative(\\psi(t), (t, 2)))]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,20 +683,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "ff43cd9a-fefb-4767-8b26-daf34a593786",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle h^{2} m \\sin^{2}{\\left(\\theta{\\left(t \\right)} \\right)} \\frac{d}{d t} \\phi{\\left(t \\right)}$"
+       "$\\displaystyle J_{1} \\sin{\\left(\\phi{\\left(t \\right)} + \\psi{\\left(t \\right)} \\right)} \\sin{\\left(\\theta{\\left(t \\right)} \\right)} \\frac{d}{d t} \\theta{\\left(t \\right)} - J_{1} \\sin^{2}{\\left(\\theta{\\left(t \\right)} \\right)} \\cos{\\left(\\phi{\\left(t \\right)} + \\psi{\\left(t \\right)} \\right)} \\frac{d}{d t} \\phi{\\left(t \\right)} - J_{3} \\sin^{2}{\\left(\\theta{\\left(t \\right)} \\right)} \\frac{d}{d t} \\phi{\\left(t \\right)} + J_{3} \\cos{\\left(\\theta{\\left(t \\right)} \\right)} \\frac{d}{d t} \\psi{\\left(t \\right)} + J_{3} \\frac{d}{d t} \\phi{\\left(t \\right)}$"
       ],
       "text/plain": [
-       "h**2*m*sin(\\theta(t))**2*Derivative(\\phi(t), t)"
+       "J_1*sin(\\phi(t) + \\psi(t))*sin(\\theta(t))*Derivative(\\theta(t), t) - J_1*sin(\\theta(t))**2*cos(\\phi(t) + \\psi(t))*Derivative(\\phi(t), t) - J_3*sin(\\theta(t))**2*Derivative(\\phi(t), t) + J_3*cos(\\theta(t))*Derivative(\\psi(t), t) + J_3*Derivative(\\phi(t), t)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,68 +704,25 @@
    "source": [
     "from sympy import trigsimp\n",
     "\n",
-    "zzz = L.dot(vect_phi)\n",
+    "zzz = L.dot(vect_psi)\n",
     "zzz.simplify()\n",
     "trigsimp(zzz)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "306de1f2-7761-4e53-811e-e770022eea71",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\sin{\\left(\\theta{\\left(t \\right)} \\right)} \\frac{d}{d t} \\phi{\\left(t \\right)}$"
-      ],
-      "text/plain": [
-       "sin(\\theta(t))*Derivative(\\phi(t), t)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_vect_psi = smp.diff(vect_psi, t)\n",
-    "d_vect_psi.simplify()\n",
-    "q = d_vect_psi.dot(vect_the)\n",
-    "trigsimp(q)"
+    "d_vect_psi.simplify()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "9e53bbe3-ef04-448a-ac2c-fae940302f80",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0\\\\0\\\\1\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[0],\n",
-       "[0],\n",
-       "[1]])"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vect_phi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "87c010c7-1693-4faa-a314-5e5a6dc2894f",
    "metadata": {},
    "outputs": [
@@ -778,7 +735,7 @@
        "sin(\\theta(t))*Derivative(\\phi(t), t)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,32 +746,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "260f325a-7cdf-4d75-bb44-4fb96b63490f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trigsimp(d_vect_psi.dot(vect_psi))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "c6ee0323-dccc-4fc8-a7e8-9912d72acbff",
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +759,7 @@
        "-sin(\\theta(t))*Derivative(\\theta(t), t)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,8 +770,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "186f8ce5-8e4d-4d0b-ba76-81db70e5ecfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 0$"
+      ],
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trigsimp(d_vect_psi.dot(vect_psi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c49af2-2dd2-471e-9281-1f86c895acce",
    "metadata": {},
    "outputs": [],
    "source": []
